# Paper_tesis

./: .gitignore  ARMA_GARCH_Model_nuevo.R  Mila_garch.R  Mila_regime_garch.ipynb  Prueba.md  Retornos.xlsx  entrenamiento.ipynb  main.py  pyproject.toml  time_series_analysis_for_quant_finance.ipynb  utils.py
Webinar/: Webinar_ML_Quantmetrics.ipynb  Webinar_Modelamiento_Econometrico.ipynb  bd_salud_coste.xlsx
